manifests/applications/test-app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - "zaap.nandi.sh"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /test-app
      route:
        - destination:
            host: nginx
            port:
              number: 80
